--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://authdb:authdb@2025@cluster0.rhooejr.mongodb.net/MERNAUTH
+MONGODB_URI='mongodb+srv://authdb:authdb@2025@cluster0.rhooejr.mongodb.net'
+JWT_SECRET='secret#text'  // for JWT token signing
+NODE_ENV='development'  // for JWT token expiration
