Working on email functionality

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,9 @@
-MONGODB_URI='mongodb+srv://authdb:authdb@2025@cluster0.rhooejr.mongodb.net'
+MONGODB_URI='mongodb+srv://authdb:I7Bg0TInFoedDqPr@cluster0.rhooejr.mongodb.net'
 JWT_SECRET='secret#text'  // for JWT token signing
 NODE_ENV='development'  // for JWT token expiration
+
+
+// SMTP Information
+SMTP_USER='8e0a7e001@smtp-brevo.com'
+SMTP_PASS='pymXCYvr6IgxbKO8'
+SENDER_MAIL='codenextit@gmail.com'
